syntax = "proto3";
package pre_persistence;
option go_package = "/pre_persistence/test/";

import "validator.proto";
import "account.proto";
import "app.proto";
import "fisherman.proto";
import "service_node.proto";
import "gov.proto";

message GenesisState {
  repeated validator Validators = 1;
  repeated account Accounts = 2;
  repeated pool Pools = 3;
  repeated fisherman Fishermen = 4;
  repeated serviceNode ServiceNodes = 5;
  repeated app Apps = 6;
  params Params = 7;
}